<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IMReady</string>

    <string name="loading">Loading...</string>

	<string name="create_meeting_name_label">Meeting name</string>
	<string name="create_meeting_default_meeting_name">My meeting</string>
    <string name="create_meeting_create">Create meeting</string>

    <string name="define_account_nickname">Dave</string>
    <string name="define_account_username">dave123</string>
    <string name="define_account_desc"></string>
    <string name="define_account_nickname_desc">You will also need a nickname, so that other people will recognise you...</string>
    <string name="define_account_username_desc">To use IMReady, you need to have an account with a unique user name...</string>
    <string name="define_account_new_button">Create New Account</string>
    <string name="define_account_existing_button">Use Existing Account</string>

    <string name="view_meeting_add_participant_button">Add participant...</string>
    <string name="view_meeting_set_participant_status_button_not_ready">Become Ready...</string>
    <string name="view_meeting_set_participant_status_button_ready">You\'re Ready!</string>
    <string name="meetings_create_meeting_button">Create meeting...</string>
    
    <string name="add_participant_user_name_label">User name</string>
    <string name="add_participant_button_default_user_name"></string>
    <string name="add_participant_button">Add participant...</string>
    
    <string name="preferences_notification_level_text">What do you want notifications for?</string>
    <string name="preferences_polling_interval_text">How often should I check for meeting updates?</string>
        
    <string-array name="preferences_notification_level_values">
        <item>No notifications</item>
        <item>New &amp; ready meetings</item>
        <item>All meeting changes</item>
    </string-array>

    <string-array name="preferences_polling_interval_values">
        <item>15 minutes</item>
        <item>1 hour</item>
        <item>Dynamic</item>
    </string-array>
    
    <string name="menu_account">Account settings</string>
    <string name="menu_preferences">Preferences</string>
</resources>
