<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="top"
		android:padding="10dp">
		<TextView  
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content"
		    android:text="@string/define_account_username_desc"/>
		<EditText android:id="@+id/define_account_username"
			android:layout_width="match_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/define_account_username"/>
		<TextView  
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content"
		    android:text="@string/define_account_nickname_desc"/>
		<EditText
		    android:id="@+id/define_account_nickname"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="15dp"
		    android:text="@string/define_account_nickname" />
		<Button android:id="@+id/define_account_new_button" 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:text="@string/define_account_new_button"/>
		<Button android:id="@+id/define_account_existing_button" 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:text="@string/define_account_existing_button"/>
	</LinearLayout>
</LinearLayout>
