<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="bottom"
		android:padding="10dp">
		<TextView android:id="@+id/create_meeting_nickname"
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content"
		    android:text="@string/create_meeting_nickname"/>
		<TextView  
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content"
		    android:text="@string/create_meeting_name_label"/>
		<EditText android:id="@+id/create_meeting_meeting_name"
			android:layout_width="match_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/create_meeting_default_meeting_name"/>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:padding="10dp">
		<Button android:id="@+id/create_meeting_button" 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:text="@string/create_meeting_create"/>
	</LinearLayout>
</LinearLayout>
